<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
									   xmlns:app="http://schemas.android.com/apk/res-auto"
									   android:layout_width="match_parent"
									   android:layout_height="match_parent"
									   android:scrollbars="vertical">
	<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
													   android:layout_height="match_parent">
		<com.google.android.material.button.MaterialButtonGroup android:id="@+id/refresh_mode"
																android:layout_width="wrap_content"
																android:layout_height="wrap_content"
																android:layout_marginTop="16dp"
																android:spacing="0dp"
																app:buttonSizeChange="@null"
																app:innerCornerSize="0dp"
																app:layout_constraintEnd_toEndOf="parent"
																app:layout_constraintStart_toStartOf="parent"
																app:layout_constraintTop_toTopOf="parent">
			<com.google.android.material.button.MaterialButton android:id="@+id/refresh_mode_normal"
															   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
															   android:layout_width="wrap_content"
															   android:layout_height="wrap_content"
															   android:checkable="true"
															   android:minWidth="48dp"
															   android:text="@string/refresh_mode_normal" />
			<com.google.android.material.button.MaterialButton android:id="@+id/refresh_mode_fast"
															   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
															   android:layout_width="wrap_content"
															   android:layout_height="wrap_content"
															   android:checkable="true"
															   android:minWidth="48dp"
															   android:text="@string/refresh_mode_fast" />
			<com.google.android.material.button.MaterialButton android:id="@+id/refresh_mode_high_quality"
															   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
															   android:layout_width="wrap_content"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="16dp"
															   android:checkable="true"
															   android:minWidth="48dp"
															   android:text="@string/refresh_mode_high_quality" />
		</com.google.android.material.button.MaterialButtonGroup>
		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/enable_drag_mode_switch"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:text="@string/enable_drag_mode_switch"
																   app:layout_constraintTop_toBottomOf="@id/refresh_mode" />
		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/enable_ime_mode_switch"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:text="@string/enable_ime_mode_switch"
																   app:layout_constraintTop_toBottomOf="@id/enable_drag_mode_switch" />
		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/allow_drag_mode_during_ime"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:text="@string/allow_drag_mode_during_ime"
																   app:layout_constraintTop_toBottomOf="@id/enable_ime_mode_switch" />
		<com.google.android.material.button.MaterialButton android:id="@+id/drag_settings"
														   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
														   android:layout_width="wrap_content"
														   android:layout_height="wrap_content"
														   android:text="@string/drag_settings"
														   app:layout_constraintEnd_toEndOf="parent"
														   app:layout_constraintStart_toStartOf="parent"
														   app:layout_constraintTop_toBottomOf="@id/allow_drag_mode_during_ime" />

		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/use_last_app_mode_in_system_ui"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:layout_marginTop="16dp"
																   android:text="@string/use_last_app_mode_in_system_ui"
																   app:layout_constraintTop_toBottomOf="@id/drag_settings" />
		<LinearLayout android:id="@+id/manual_full_refresh_type"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:layout_marginHorizontal="16dp"
					  android:orientation="horizontal"
					  app:layout_constraintTop_toBottomOf="@id/use_last_app_mode_in_system_ui">
			<TextView android:layout_width="0dp"
					  android:layout_height="wrap_content"
					  android:layout_gravity="center_vertical"
					  android:layout_marginEnd="12dp"
					  android:layout_weight="1"
					  android:text="@string/manual_full_refresh_type"
					  android:textColor="?attr/colorOnSurface" />
			<com.google.android.material.button.MaterialButtonGroup android:layout_width="wrap_content"
																	android:layout_height="wrap_content"
																	android:layout_gravity="center_vertical"
																	android:spacing="0dp"
																	app:buttonSizeChange="@null"
																	app:innerCornerSize="0dp">
				<com.google.android.material.button.MaterialButton android:id="@+id/manual_full_refresh_type_blank"
																   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
																   android:layout_width="wrap_content"
																   android:layout_height="wrap_content"
																   android:checkable="true"
																   android:minWidth="48dp"
																   android:text="@string/full_refresh_type_blank" />
				<com.google.android.material.button.MaterialButton android:id="@+id/manual_full_refresh_type_invert"
																   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
																   android:layout_width="wrap_content"
																   android:layout_height="wrap_content"
																   android:checkable="true"
																   android:minWidth="48dp"
																   android:text="@string/full_refresh_type_invert" />
			</com.google.android.material.button.MaterialButtonGroup>
		</LinearLayout>

		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/use_global_contrast_map"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:layout_marginTop="16dp"
																   android:text="@string/use_global_contrast_map"
																   app:layout_constraintTop_toBottomOf="@id/manual_full_refresh_type" />
		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/use_global_contrast_map_in_high_quality_mode"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:text="@string/use_global_contrast_map_in_high_quality_mode"
																   app:layout_constraintTop_toBottomOf="@id/use_global_contrast_map" />
		<include android:id="@+id/global_contrast_map_min"
				 layout="@layout/numeric_input_3_digits"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 app:layout_constraintEnd_toStartOf="@id/global_contrast_map_max"
				 app:layout_constraintStart_toStartOf="parent"
				 app:layout_constraintTop_toBottomOf="@id/use_global_contrast_map_in_high_quality_mode" />
		<include android:id="@+id/global_contrast_map_max"
				 layout="@layout/numeric_input_3_digits"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 app:layout_constraintEnd_toEndOf="parent"
				 app:layout_constraintStart_toEndOf="@id/global_contrast_map_min"
				 app:layout_constraintTop_toBottomOf="@id/use_global_contrast_map_in_high_quality_mode" />
		<androidx.constraintlayout.widget.Barrier android:id="@+id/global_contrast_map_barrier"
												  android:layout_width="match_parent"
												  android:layout_height="wrap_content"
												  app:barrierDirection="bottom"
												  app:constraint_referenced_ids="global_contrast_map_min,global_contrast_map_max" />

		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/use_fast_mode_contrast_map"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:layout_marginTop="16dp"
																   android:text="@string/use_fast_mode_contrast_map"
																   app:layout_constraintTop_toBottomOf="@id/global_contrast_map_barrier" />
		<include android:id="@+id/fast_mode_contrast_map_min"
				 layout="@layout/numeric_input_3_digits"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 app:layout_constraintEnd_toStartOf="@id/fast_mode_contrast_map_max"
				 app:layout_constraintStart_toStartOf="parent"
				 app:layout_constraintTop_toBottomOf="@id/use_fast_mode_contrast_map" />
		<include android:id="@+id/fast_mode_contrast_map_max"
				 layout="@layout/numeric_input_3_digits"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 app:layout_constraintEnd_toEndOf="parent"
				 app:layout_constraintStart_toEndOf="@id/fast_mode_contrast_map_min"
				 app:layout_constraintTop_toBottomOf="@id/use_fast_mode_contrast_map" />
		<androidx.constraintlayout.widget.Barrier android:id="@+id/fast_mode_contrast_map_barrier"
												  android:layout_width="match_parent"
												  android:layout_height="wrap_content"
												  app:barrierDirection="bottom"
												  app:constraint_referenced_ids="fast_mode_contrast_map_min,fast_mode_contrast_map_max" />

		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/forced_color_map_enable"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:layout_marginTop="16dp"
																   android:ellipsize="end"
																   android:maxLines="1"
																   android:text="@string/forced_color_map_enable"
																   app:layout_constraintTop_toBottomOf="@id/fast_mode_contrast_map_barrier" />
		<com.google.android.material.button.MaterialButton android:id="@+id/saved_color_maps"
														   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
														   android:layout_width="wrap_content"
														   android:layout_height="wrap_content"
														   android:text="@string/saved_color_maps"
														   app:layout_constraintEnd_toEndOf="parent"
														   app:layout_constraintStart_toStartOf="parent"
														   app:layout_constraintTop_toBottomOf="@id/forced_color_map_enable" />

		<Space android:layout_width="match_parent"
			   android:layout_height="16dp"
			   app:layout_constraintBottom_toBottomOf="parent"
			   app:layout_constraintTop_toBottomOf="@id/saved_color_maps" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>