<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
									   xmlns:app="http://schemas.android.com/apk/res-auto"
									   android:layout_width="match_parent"
									   android:layout_height="wrap_content"
									   android:scrollbars="vertical">
	<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
													   android:layout_height="wrap_content">
		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/force_fast_mode"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:text="@string/force_fast_mode"
																   app:layout_constraintTop_toTopOf="parent" />
		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/forced_color_map_enable"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:ellipsize="end"
																   android:maxLines="1"
																   android:text="@string/forced_color_map_enable"
																   app:layout_constraintTop_toBottomOf="@id/force_fast_mode" />
		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/force_disable_color_maps"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:text="@string/force_disable_color_maps"
																   app:layout_constraintTop_toBottomOf="@id/forced_color_map_enable" />

		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/enable_app_profile"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:layout_marginTop="16dp"
																   android:ellipsize="end"
																   android:maxLines="1"
																   android:text="@string/quick_settings_enable_app_profile"
																   app:layout_constraintTop_toBottomOf="@id/force_disable_color_maps" />
		<com.google.android.material.button.MaterialButtonGroup android:id="@+id/app_profile_refresh_mode"
																android:layout_width="wrap_content"
																android:layout_height="wrap_content"
																android:spacing="0dp"
																app:buttonSizeChange="@null"
																app:innerCornerSize="0dp"
																app:layout_constraintEnd_toEndOf="parent"
																app:layout_constraintStart_toStartOf="parent"
																app:layout_constraintTop_toBottomOf="@id/enable_app_profile">
			<com.google.android.material.button.MaterialButton android:id="@+id/app_profile_refresh_mode_default"
															   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
															   android:layout_width="wrap_content"
															   android:layout_height="wrap_content"
															   android:checkable="true"
															   android:minWidth="48dp"
															   android:text="@string/profile_setting_default" />
			<com.google.android.material.button.MaterialButton android:id="@+id/app_profile_refresh_mode_normal"
															   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
															   android:layout_width="wrap_content"
															   android:layout_height="wrap_content"
															   android:checkable="true"
															   android:minWidth="48dp"
															   android:text="@string/refresh_mode_normal" />
			<com.google.android.material.button.MaterialButton android:id="@+id/app_profile_refresh_mode_fast"
															   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
															   android:layout_width="wrap_content"
															   android:layout_height="wrap_content"
															   android:checkable="true"
															   android:minWidth="48dp"
															   android:text="@string/refresh_mode_fast" />
			<com.google.android.material.button.MaterialButton android:id="@+id/app_profile_refresh_mode_high_quality"
															   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
															   android:layout_width="wrap_content"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="16dp"
															   android:checkable="true"
															   android:minWidth="48dp"
															   android:text="@string/refresh_mode_high_quality" />
		</com.google.android.material.button.MaterialButtonGroup>

		<com.google.android.material.button.MaterialButtonGroup android:id="@+id/global_refresh_mode"
																android:layout_width="wrap_content"
																android:layout_height="wrap_content"
																android:layout_marginTop="16dp"
																android:spacing="0dp"
																app:buttonSizeChange="@null"
																app:innerCornerSize="0dp"
																app:layout_constraintEnd_toEndOf="parent"
																app:layout_constraintStart_toStartOf="parent"
																app:layout_constraintTop_toBottomOf="@id/app_profile_refresh_mode">
			<com.google.android.material.button.MaterialButton android:id="@+id/global_refresh_mode_normal"
															   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
															   android:layout_width="wrap_content"
															   android:layout_height="wrap_content"
															   android:checkable="true"
															   android:minWidth="48dp"
															   android:text="@string/refresh_mode_normal" />
			<com.google.android.material.button.MaterialButton android:id="@+id/global_refresh_mode_fast"
															   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
															   android:layout_width="wrap_content"
															   android:layout_height="wrap_content"
															   android:checkable="true"
															   android:minWidth="48dp"
															   android:text="@string/refresh_mode_fast" />
			<com.google.android.material.button.MaterialButton android:id="@+id/global_refresh_mode_high_quality"
															   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
															   android:layout_width="wrap_content"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="16dp"
															   android:checkable="true"
															   android:minWidth="48dp"
															   android:text="@string/refresh_mode_high_quality" />
		</com.google.android.material.button.MaterialButtonGroup>
		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/enable_drag_mode_switch"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:text="@string/enable_drag_mode_switch"
																   app:layout_constraintTop_toBottomOf="@id/global_refresh_mode" />
		<com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/enable_ime_mode_switch"
																   android:layout_width="match_parent"
																   android:layout_height="wrap_content"
																   android:layout_marginHorizontal="16dp"
																   android:text="@string/enable_ime_mode_switch"
																   app:layout_constraintTop_toBottomOf="@id/enable_drag_mode_switch" />
		<LinearLayout android:id="@+id/manual_full_refresh_type"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:layout_marginHorizontal="16dp"
					  android:orientation="horizontal"
					  app:layout_constraintTop_toBottomOf="@id/enable_ime_mode_switch">
			<TextView android:layout_width="0dp"
					  android:layout_height="wrap_content"
					  android:layout_gravity="center_vertical"
					  android:layout_marginEnd="12dp"
					  android:layout_weight="1"
					  android:text="@string/manual_full_refresh_type"
					  android:textColor="?attr/colorOnSurface" />
			<com.google.android.material.button.MaterialButtonGroup android:layout_width="wrap_content"
																	android:layout_height="wrap_content"
																	android:layout_gravity="center_vertical"
																	android:spacing="0dp"
																	app:buttonSizeChange="@null"
																	app:innerCornerSize="0dp">
				<com.google.android.material.button.MaterialButton android:id="@+id/manual_full_refresh_type_blank"
																   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
																   android:layout_width="wrap_content"
																   android:layout_height="wrap_content"
																   android:checkable="true"
																   android:minWidth="48dp"
																   android:text="@string/full_refresh_type_blank" />
				<com.google.android.material.button.MaterialButton android:id="@+id/manual_full_refresh_type_invert"
																   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
																   android:layout_width="wrap_content"
																   android:layout_height="wrap_content"
																   android:checkable="true"
																   android:minWidth="48dp"
																   android:text="@string/full_refresh_type_invert" />
			</com.google.android.material.button.MaterialButtonGroup>
		</LinearLayout>
		<com.google.android.material.button.MaterialButton android:id="@+id/more_settings"
														   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
														   android:layout_width="match_parent"
														   android:layout_height="wrap_content"
														   android:layout_marginHorizontal="8dp"
														   android:text="@string/more_settings"
														   app:layout_constraintEnd_toEndOf="parent"
														   app:layout_constraintStart_toStartOf="parent"
														   app:layout_constraintTop_toBottomOf="@id/manual_full_refresh_type" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>