<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">
	<com.google.android.material.appbar.MaterialToolbar android:id="@+id/toolbar"
														style="@style/Widget.MaterialComponents.Toolbar.Primary"
														android:layout_width="match_parent"
														android:layout_height="wrap_content" />
	<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
										   android:layout_height="match_parent"
										   android:scrollbars="vertical">
		<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
														   android:layout_height="match_parent">
			<LinearLayout android:id="@+id/navbar_manual_full_refresh_delay"
						  android:layout_width="match_parent"
						  android:layout_height="wrap_content"
						  android:layout_marginHorizontal="16dp"
						  android:layout_marginTop="16dp"
						  android:orientation="horizontal"
						  app:layout_constraintTop_toTopOf="parent">
				<TextView android:layout_width="0dp"
						  android:layout_height="wrap_content"
						  android:layout_gravity="center_vertical"
						  android:layout_marginEnd="12dp"
						  android:layout_weight="1"
						  android:text="@string/navbar_manual_full_refresh_delay"
						  android:textColor="?attr/colorOnSurface" />
				<include android:id="@+id/navbar_manual_full_refresh_delay_value"
						 layout="@layout/numeric_input_4_digits"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout android:id="@+id/explicit_refresh_regular_post_delay"
						  android:layout_width="match_parent"
						  android:layout_height="wrap_content"
						  android:layout_marginHorizontal="16dp"
						  android:layout_marginTop="14dp"
						  android:orientation="horizontal"
						  app:layout_constraintTop_toBottomOf="@id/navbar_manual_full_refresh_delay">
				<TextView android:layout_width="0dp"
						  android:layout_height="wrap_content"
						  android:layout_gravity="center_vertical"
						  android:layout_marginEnd="12dp"
						  android:layout_weight="1"
						  android:text="@string/explicit_refresh_regular_post_delay"
						  android:textColor="?attr/colorOnSurface" />
				<include android:id="@+id/explicit_refresh_regular_post_delay_value"
						 layout="@layout/numeric_input_3_digits"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_marginVertical="2dp" />
			</LinearLayout>
			<LinearLayout android:id="@+id/explicit_refresh_blank_post_delay"
						  android:layout_width="match_parent"
						  android:layout_height="wrap_content"
						  android:layout_marginHorizontal="16dp"
						  android:orientation="horizontal"
						  app:layout_constraintTop_toBottomOf="@id/explicit_refresh_regular_post_delay">
				<TextView android:layout_width="0dp"
						  android:layout_height="wrap_content"
						  android:layout_gravity="center_vertical"
						  android:layout_marginEnd="12dp"
						  android:layout_weight="1"
						  android:text="@string/explicit_refresh_blank_post_delay"
						  android:textColor="?attr/colorOnSurface" />
				<include android:id="@+id/explicit_refresh_blank_post_delay_value"
						 layout="@layout/numeric_input_3_digits"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_marginVertical="2dp" />
			</LinearLayout>

			<LinearLayout android:id="@+id/screen_power_off_delay"
						  android:layout_width="match_parent"
						  android:layout_height="wrap_content"
						  android:layout_marginHorizontal="16dp"
						  android:layout_marginTop="12dp"
						  android:orientation="horizontal"
						  app:layout_constraintTop_toBottomOf="@id/explicit_refresh_blank_post_delay">
				<TextView android:layout_width="0dp"
						  android:layout_height="wrap_content"
						  android:layout_gravity="center_vertical"
						  android:layout_marginEnd="12dp"
						  android:layout_weight="1"
						  android:text="@string/screen_power_off_delay"
						  android:textColor="?attr/colorOnSurface" />
				<include android:id="@+id/screen_power_off_delay_value"
						 layout="@layout/numeric_input_4_digits"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_marginVertical="2dp" />
			</LinearLayout>

			<LinearLayout android:id="@+id/vcom"
						  android:layout_width="match_parent"
						  android:layout_height="wrap_content"
						  android:layout_marginHorizontal="16dp"
						  android:layout_marginTop="12dp"
						  android:orientation="horizontal"
						  app:layout_constraintTop_toBottomOf="@id/screen_power_off_delay">
				<TextView android:layout_width="0dp"
						  android:layout_height="wrap_content"
						  android:layout_gravity="center_vertical"
						  android:layout_marginEnd="12dp"
						  android:layout_weight="1"
						  android:text="@string/vcom"
						  android:textColor="?attr/colorOnSurface" />
				<include android:id="@+id/vcom_value"
						 layout="@layout/numeric_input_4_digits"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_marginVertical="2dp" />
			</LinearLayout>

			<Space android:layout_width="match_parent"
				   android:layout_height="14dp"
				   app:layout_constraintBottom_toBottomOf="parent"
				   app:layout_constraintTop_toBottomOf="@id/vcom" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.core.widget.NestedScrollView>
</LinearLayout>